# clockify-cli

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conan_layout.ini  conanws.yml
.github/workflows/: build.yml
cli/: CMakeLists.txt  conanfile.py
cli/include/: clockify_cli.hpp
cli/src/: clockify_cli.cpp  main.cpp
consumer/: CMakeLists.txt  clockify_consumer.cpp  clockify_consumer.hpp  conanfile.py  lib
consumer/src/: clockify_consumer.cpp
test/: CMakeLists.txt  conanfile.txt  test_consumer.cpp
